:memo: Updated yml for lighthouse

--- a/src/StartLighthouseTest/StartLighthouseTestV2/package.json
+++ b/src/StartLighthouseTest/StartLighthouseTestV2/package.json
@@ -23,7 +23,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com:Epinova/epinova-dxp-deployment.git"
+        "url": "git@ssh.dev.azure.com:v3/ovelartelius/epinova-lighthouse-extension"
     },
     "author": "Ove Lartelius",
     "license": "MIT"
