--- a/build-lighthouse-package_ubuntu.yml
+++ b/build-lighthouse-package_ubuntu.yml
@@ -34,7 +34,7 @@ steps:
   #     targetType: filePath
   #     filePath: ./BuildScripts/CopyScripts.ps1
 
-  - template: build-node-tasks_ubuntu.yml
+  - template: build-lighthouse-node-tasks_ubuntu.yml
 
   - task: Npm@1
     displayName: 'npm install extension'
